[gd_scene load_steps=5 format=2]

[ext_resource path="res://StoryEditor.gd" type="Script" id=1]
[ext_resource path="res://StoryParser.gd" type="Script" id=2]
[ext_resource path="res://StoryGraphEdit.gd" type="Script" id=3]
[ext_resource path="res://StorySaveLoad.gd" type="Script" id=4]

[node name="StoryEditor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="VBox"]
margin_right = 1024.0
margin_bottom = 20.0

[node name="LoadButton" type="Button" parent="VBox/HBox"]
margin_right = 42.0
margin_bottom = 20.0
text = "Load"

[node name="SaveButton" type="Button" parent="VBox/HBox"]
margin_left = 46.0
margin_right = 87.0
margin_bottom = 20.0
text = "Save"

[node name="ExportButton" type="Button" parent="VBox/HBox"]
margin_left = 91.0
margin_right = 143.0
margin_bottom = 20.0
text = "Export"

[node name="HSeparator" type="HSeparator" parent="VBox"]
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 28.0

[node name="HBox2" type="HBoxContainer" parent="VBox"]
margin_top = 32.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="VBox/HBox2"]
margin_right = 75.0
margin_bottom = 568.0

[node name="AddNodeMenuButton" type="MenuButton" parent="VBox/HBox2/VBox"]
margin_right = 75.0
margin_bottom = 20.0
text = "Add Node"
flat = false

[node name="VSeparator" type="VSeparator" parent="VBox/HBox2"]
margin_left = 79.0
margin_right = 83.0
margin_bottom = 568.0

[node name="StoryGraphEdit" type="GraphEdit" parent="VBox/HBox2"]
margin_left = 87.0
margin_right = 1024.0
margin_bottom = 568.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_offset = Vector2( -50, -20 )
script = ExtResource( 3 )

[node name="AddNodePopupMenu" type="PopupMenu" parent="."]
margin_right = 20.0
margin_bottom = 20.0

[node name="StoryParser" type="Node" parent="."]
script = ExtResource( 2 )

[node name="StorySaveLoad" type="Node" parent="."]
script = ExtResource( 4 )
[connection signal="pressed" from="VBox/HBox/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="VBox/HBox/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="VBox/HBox/ExportButton" to="." method="_on_ExportButton_pressed"]
[connection signal="connection_request" from="VBox/HBox2/StoryGraphEdit" to="." method="_on_GraphEdit_connection_request"]
[connection signal="connection_request" from="VBox/HBox2/StoryGraphEdit" to="VBox/HBox2/StoryGraphEdit" method="_on_StoryGraphEdit_connection_request"]
[connection signal="connection_to_empty" from="VBox/HBox2/StoryGraphEdit" to="." method="_on_GraphEdit_connection_to_empty"]
[connection signal="connection_to_empty" from="VBox/HBox2/StoryGraphEdit" to="VBox/HBox2/StoryGraphEdit" method="_on_StoryGraphEdit_connection_to_empty"]
[connection signal="right_clicked" from="VBox/HBox2/StoryGraphEdit" to="." method="_on_StoryGraphEdit_right_clicked"]
[connection signal="id_pressed" from="AddNodePopupMenu" to="." method="_on_AddNodePopupMenu_id_pressed"]
